[package]
name = "binary2d-upsampler"
version = "0.1.0"
authors = ["Jack Hu <zhongth@g.clemson.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "2.33.3"
binary2d = { git = "https://github.com/clemson-cal/app-binary2d", rev = "f2e84c0" }
